1, 适配jdk24